# haskell-web-frameworks

./: .gitignore  README.md  perf-2025.txt  perf-2026.txt  preliminary-2026.txt  preliminary.txt
scotty/: Main.hs  myproj.cabal  stack.yaml
servant/: myproj.cabal  stack.yaml
servant/app/: Main.hs
servant/src/: Lib.hs
snap/: .gitignore  myproj.cabal  package.yaml  stack.yaml
snap/src/: Main.hs
spock/: spock.cabal
spock/app/: Main.hs
yesod-minimal/: .gitignore  client_session_key.aes  package.yaml  routes  stack.yaml
yesod-minimal/src/: Application.hs  Bar.hs  Foo.hs
