name:                spock
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/marcosh/spock#readme
author:              Marco Perone
maintainer:          pasafama@gmail.com
copyright:           2020 Marco Perone
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable spock
  hs-source-dirs:      app
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , Spock >= 0.11
                     , aeson
                     , mtl
                     , text
